Bug 118240 - AutoCaption shouldn't allow Categories with spaces
Summary: AutoCaption shouldn't allow Categories with spaces
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.2.0 target:6.1.0.1
Keywords:
Depends on:
Blocks: AutoCaption
  Show dependency treegraph
 
Reported: 2018-06-19 14:25 UTC by Xisco Faulí
Modified: 2019-09-28 04:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-06-19 14:25:32 UTC
Steps to reproduce:
1. Open Writer
2. Go to Tools - Options - Writer - AutoCaption, select LibreOffice Writer, write 'Test test' in category and select 1,2,3 in numbering...
3. Insert a new image

-> Observed behaviour: The image's caption is 0. It should be 1

The Insert Caption dialog from Insert - Caption doesn't allow to insert spaces.

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: d60d695fcc5064e1f16842387fdce23456a64694
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

and

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 1 Dieter 2018-06-19 14:48:44 UTC
I confirm it with

Version: 6.1.0.0.beta2 (x64)
Build ID: 0f4d2060bc90b4008fbc8e6d9a49ec7eeea60b78
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
Locale: en-US (de_DE); Calc: CL
Comment 2 Xisco Faulí 2018-06-19 15:20:31 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/56115/
Comment 3 Commit Notification 2018-06-24 23:12:05 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b34ed105d5eead1cb7657d0a8fc23a524cf28d31

tdf#118240 Filter category in Autocaption as done in insert caption

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2018-06-25 13:37:20 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fa2e9cd1cb9a37028c4a1107b6a58e1ac701993b&h=libreoffice-6-1

tdf#118240 Filter category in Autocaption as done in insert caption

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Dieter 2019-09-27 04:46:07 UTC Comment hidden (obsolete)
Comment 6 Xisco Faulí 2019-09-27 12:23:17 UTC Comment hidden (obsolete)
Comment 7 Dieter 2019-09-28 04:57:39 UTC
VERFIFIED with

Version: 6.3.2.2 (x64)
Build ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: threaded