tdf#118240 Filter category in Autocaption as done in insert caption

Change-Id: I138a47419a7c18f59ecc1e0935b669546fcee6e6